tell rails it's using https, should solve webhat/oplerno#21

--- a/modules/oplerno_nginx/templates/nginx.erb
+++ b/modules/oplerno_nginx/templates/nginx.erb
@@ -61,6 +61,7 @@ server {
 	}
 
 	location / {
+	  proxy_set_header X-FORWARDED_PROTO https;
 		proxy_pass http://localhost:9000;
 		proxy_set_header Host $host;
 	}
