changed nginx server_name

--- a/modules/oplerno_nginx/templates/nginx.erb
+++ b/modules/oplerno_nginx/templates/nginx.erb
@@ -7,6 +7,7 @@ upstream appservers {
 
 server {
 	listen   80;
+	server_name  marketplace.oplerno.com;
 
 	if ($server_port = 80) {
 		return 301 https://marketplace.oplerno.com;
