--- a/modules/oplerno_nginx/templates/nginx.erb
+++ b/modules/oplerno_nginx/templates/nginx.erb
@@ -25,6 +25,7 @@ server {
 	ssl_certificate  /home/deploy/.marketplace_ssl.crt;
 	ssl_certificate_key  /home/deploy/.marketplace_ssl.key;
 	ssl_dhparam /home/deploy/.dh.param;
+	ssl_session_cache shared:SSL:10m;
 	ssl_session_timeout  5m;
 	ssl_prefer_server_ciphers on;
 	ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
