--- a/modules/oplerno_nginx/templates/nginx.erb
+++ b/modules/oplerno_nginx/templates/nginx.erb
@@ -46,6 +46,10 @@ server {
 		return 200 "f75b6412245547667700373e3780cae0";
 	}
 
+	location = /mywota61e6a378d6d13331c7f.html {
+		return 200 "61482dcd4fc8845d75f2d34ca8695fa3";
+	}
+
 	error_page 500 501 503 /500.html;
 	location = /500.html {
 		root /home/deploy/www/current/public;
