--- a/modules/sidekiq/templates/sidekiq.erb
+++ b/modules/sidekiq/templates/sidekiq.erb
@@ -40,6 +40,10 @@ case "$1" in
     kill -TERM $(cat /var/run/$SERVICE.pid)
     rm /var/run/$SERVICE.pid /var/lock/$SERVICE
     ;;
+	status)
+		pgrep $SERVICE
+		exit $?
+		;;
   *)
     echo "Usage: /etc/init.d/$SERVICE {start|stop}"
     exit 1
