remove daemonize redis to stop puppet log messages

--- a/modules/oplerno_redis/templates/redis.conf.erb
+++ b/modules/oplerno_redis/templates/redis.conf.erb
@@ -1,7 +1,7 @@
 ## This file is managed by the 'redis' puppet module
 ## It was generated from redis/templates/redis.conf.erb
 
-daemonize yes
+#daemonize yes
 
 pidfile /var/run/redis/redis.pid
 
