pass additional variables

--- a/modules/sidekiq/templates/sidekiq.sh.erb
+++ b/modules/sidekiq/templates/sidekiq.sh.erb
@@ -2,3 +2,7 @@ export REDIS_URL='http://puppet:6379/'
 export PAYPAL_USER='x'
 export PAYPAL_PASS='x'
 export PAYPAL_SIG='x'
+export RAILS_ENV='production'
+export DB='mysql'
+export DEVISE_SECRET='none'
+export CANVAS_TOKEN='@CANVAS_TOKEN'
