--- a/modules/sidekiq/templates/sidekiq.sh.erb
+++ b/modules/sidekiq/templates/sidekiq.sh.erb
@@ -5,4 +5,4 @@ export PAYPAL_SIG='x'
 export RAILS_ENV='production'
 export DB='mysql'
 export DEVISE_SECRET='none'
-export CANVAS_TOKEN='@CANVAS_TOKEN'
+export CANVAS_TOKEN='<%= @CANVAS_TOKEN %>'
