Content-Security-Policy

--- a/modules/oplerno_nginx/templates/nginx.erb
+++ b/modules/oplerno_nginx/templates/nginx.erb
@@ -36,7 +36,7 @@ server {
 	# Headers
 	add_header Strict-Transport-Security max-age=31536000;
 	add_header X-Frame-Options DENY;
-	add_header Content-Security-Policy default-src 'none'\; script-src 'self' www.authy.com js-agent.newrelic.com www.google-analytics.com ajax.googleapis.com\; connect-src: 'self'\; img-src: 'self'; style-src: 'self'\;;
+	add_header Content-Security-Policy "default-src 'none'; script-src 'self' www.authy.com js-agent.newrelic.com www.google-analytics.com ajax.googleapis.com; connect-src: 'self'; img-src: 'self'; style-src: 'self';";
 
 	location = /google99d84ca7cbab332f.html {
 		rewrite ^/(.*)  $1;
