--- a/modules/oplerno_nginx/templates/nginx.erb
+++ b/modules/oplerno_nginx/templates/nginx.erb
@@ -1,95 +1,99 @@
 
 upstream appservers {
-    server localhost:9000	weight=5;
-    server app01:9000	 	weight=10 max_fails=3 fail_timeout=30s;
-    server app02:9000	 	weight=10 max_fails=3 fail_timeout=30s;
+    server localhost:9000  weight=5;
+    server app01:9000     weight=10 max_fails=3 fail_timeout=30s;
+    server app02:9000     weight=10 max_fails=3 fail_timeout=30s;
 }
 
 server {
-	listen   80;
-	server_name  .oplerno.com;
+  listen   80;
+  server_name  .oplerno.com;
 
-	if ($server_port = 80) {
-		return 301 https://enroll.oplerno.com$request_uri;
-	}
+  if ($server_port = 80) {
+    return 301 https://enroll.oplerno.com$request_uri;
+  }
 }
 
 server {
-	listen   443  default ssl;
-	listen   [::]:443 default ssl ipv6only=on;
-	server_name  enroll.oplerno.com;
-	root /home/deploy/www/current/public;
-	disable_symlinks off;
+  listen   443  default ssl;
+  listen   [::]:443 default ssl ipv6only=on;
+  server_name  enroll.oplerno.com;
+  root /home/deploy/www/current/public;
+  disable_symlinks off;
 
-	ssl  on;
-	ssl_certificate  /home/deploy/.enroll_ssl.crt;
-	ssl_certificate_key  /home/deploy/.oplerno_ssl.key;
-	ssl_dhparam /home/deploy/.dh.param;
-	ssl_session_cache shared:SSL:10m;
-	ssl_session_timeout  5m;
-	ssl_prefer_server_ciphers on;
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
-	ssl_stapling on;
-	ssl_stapling_verify on;
+  ssl  on;
+  ssl_certificate  /home/deploy/.enroll_ssl.crt;
+  ssl_certificate_key  /home/deploy/.oplerno_ssl.key;
+  ssl_dhparam /home/deploy/.dh.param;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_timeout  5m;
+  ssl_prefer_server_ciphers on;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
+  ssl_stapling on;
+  ssl_stapling_verify on;
 
-	# Headers
-	add_header Strict-Transport-Security max-age=31536000;
-	add_header X-Frame-Options DENY;
-	#add_header Content-Security-Policy "default-src 'self'; script-src 'self' www.authy.com js-agent.newrelic.com www.google-analytics.com ajax.googleapis.com;";
+  # Headers
+  add_header Strict-Transport-Security max-age=31536000;
+  add_header X-Frame-Options DENY;
+  #add_header Content-Security-Policy "default-src 'self'; script-src 'self' www.authy.com js-agent.newrelic.com www.google-analytics.com ajax.googleapis.com;";
 
-	location = /google99d84ca7cbab332f.html {
-		rewrite ^/(.*)  $1;
-		return 200 "google-site-verification: $uri";
-	}
+  location = /google99d84ca7cbab332f.html {
+    rewrite ^/(.*)  $1;
+    return 200 "google-site-verification: $uri";
+  }
 
-	location = /mywotccefb859a96240aadf98.html {
-		return 200 "f75b6412245547667700373e3780cae0";
-	}
+  location = /mywotccefb859a96240aadf98.html {
+    return 200 "f75b6412245547667700373e3780cae0";
+  }
 
-	location = /mywota61e6a378d6d13331c7f.html {
-		return 200 "61482dcd4fc8845d75f2d34ca8695fa3";
-	}
+  location = /mywota61e6a378d6d13331c7f.html {
+    return 200 "61482dcd4fc8845d75f2d34ca8695fa3";
+  }
 
-	location = /robot.txt {
-		root /home/deploy/www/current/public;
-	}
+  location = /robot.txt {
+    root /home/deploy/www/current/public;
+  }
 
-	error_page 500 501 503 /500.html;
-	location = /500.html {
-		root /home/deploy/www/current/public;
-	}
+  error_page 500 501 503 /500.html;
+  location = /500.html {
+    root /home/deploy/www/current/public;
+  }
 
-	error_page 502 /502.html;
-	location = /502.html {
-		root /home/deploy/www/current/public;
-	}
+  error_page 502 /502.html;
+  location = /502.html {
+    root /home/deploy/www/current/public;
+  }
 
-	error_page 504 /504.html;
-	location = /504.html {
-		root /home/deploy/www/current/public;
-	}
+  error_page 504 /504.html;
+  location = /504.html {
+    root /home/deploy/www/current/public;
+  }
 
-	location ~ /images/ {
-		root /home/deploy/www/current/public/;
-	}
+  location ~ /images/ {
+    root /home/deploy/www/current/public/;
+  }
 
-	location = /favicon.ico {
-		root /home/deploy/www/current/public/;
-	}
+  location = /favicon.ico {
+    root /home/deploy/www/current/public/;
+  }
 
-	location = /sitemap.xml {
-		root /home/deploy/www/current/public;
-	}
+  location = /sitemap.xml {
+    root /home/deploy/www/current/public;
+  }
 
-	location ~ ^/(assets)/  {
-		root /home/deploy/www/current/public/;
-		gzip_static on; # to serve pre-gzipped version
-		expires max;
-		add_header Cache-Control public;
-	}
+  location ~ ^/(assets)/  {
+    root /home/deploy/www/current/public/;
+    gzip_static on; # to serve pre-gzipped version
+    expires max;
+    add_header Cache-Control public;
+  }
 
-	location / {
+  location /invited/($|.*) {
+    rewrite ^(.*)$ /invites/edit?invite_validate[code]=$1;
+  }
+
+  location / {
     if ($http_origin ~* (s\.codepen\.io|www\.oplerno\.com|enroll\.oplerno\.com)$) {
       add_header Access-Control-Allow-Origin "$http_origin";
     }
@@ -97,5 +101,5 @@ server {
     proxy_pass http://appservers;
     #proxy_pass http://localhost:9000;
     proxy_set_header Host $host;
-	}
+  }
 }
