--- a/modules/oplerno_nginx/templates/login.erb
+++ b/modules/oplerno_nginx/templates/login.erb
@@ -1,29 +1,20 @@
 
-upstream appservers {
-    server localhost:9000  weight=5;
-    server app01:9000     weight=10 max_fails=3 fail_timeout=30s;
-    server app02:9000     weight=10 max_fails=3 fail_timeout=30s;
+upstream login_servers {
+    server localhost:3000  weight=5;
+    server app01:3000     weight=10 max_fails=3 fail_timeout=30s;
+    server app02:3000     weight=10 max_fails=3 fail_timeout=30s;
 }
 
-server {
-  listen   80;
-  server_name  .oplerno.com;
-
-  if ($server_port = 80) {
-    return 301 https://enroll.oplerno.com$request_uri;
-  }
-}
 
 server {
-  listen   <%= $ipaddress_eth0 %>:443  default ssl;
-  listen   [::]:443 default ssl ipv6only=on;
-  server_name  enroll.oplerno.com;
+  listen   <%= $ipaddress_eth0_0 %>:443  default ssl;
+  server_name  logon.oplerno.com;
   root /home/deploy/www/current/public;
   disable_symlinks off;
 
   ssl  on;
-  ssl_certificate  /home/deploy/.enroll_ssl.crt;
-  ssl_certificate_key  /home/deploy/.oplerno_ssl.key;
+  ssl_certificate  /home/deploy/.login.crt;
+  ssl_certificate_key  /home/deploy/.login.key;
   ssl_dhparam /home/deploy/.dh.param;
   ssl_session_cache shared:SSL:10m;
   ssl_session_timeout  5m;
@@ -95,11 +86,11 @@ server {
   }
 
   location / {
-    if ($http_origin ~* (s\.codepen\.io|www\.oplerno\.com|enroll\.oplerno\.com)$) {
+    if ($http_origin ~* (s\.codepen\.io|*.\.oplerno\.com)$) {
       add_header Access-Control-Allow-Origin "$http_origin";
     }
     proxy_set_header X-FORWARDED_PROTO https;
-    proxy_pass http://appservers;
+    proxy_pass http://login_servers;
     #proxy_pass http://localhost:9000;
     proxy_set_header Host $host;
   }
