puppet bug, too long since I last confed this

--- a/modules/oplerno_nginx/templates/logon.erb
+++ b/modules/oplerno_nginx/templates/logon.erb
@@ -7,7 +7,7 @@ upstream login_servers {
 
 
 server {
-  listen   <%= $ipaddress_eth0_0 %>:443  default ssl;
+  listen   <%= @ipaddress_eth0_0 %>:443  default ssl;
   server_name  logon.oplerno.com;
   root /home/deploy/www/current/public;
   disable_symlinks off;
