--- a/modules/oplerno_nginx/templates/nginx.erb
+++ b/modules/oplerno_nginx/templates/nginx.erb
@@ -9,13 +9,13 @@ server {
   listen   80;
   server_name  .oplerno.com;
 
-  if ($server_port = 80) {
+  if (@server_port = 80) {
     return 301 https://enroll.oplerno.com$request_uri;
   }
 }
 
 server {
-  listen   <%= $ipaddress_eth0 %>:443  default ssl;
+  listen   <%= @ipaddress_eth0 %>:443  default ssl;
   listen   [::]:443 default ssl ipv6only=on;
   server_name  enroll.oplerno.com;
   root /home/deploy/www/current/public;
