--- a/modules/oplerno_nginx/templates/logon.erb
+++ b/modules/oplerno_nginx/templates/logon.erb
@@ -13,8 +13,8 @@ server {
   disable_symlinks off;
 
   ssl  on;
-  ssl_certificate  /home/deploy/.login.crt;
-  ssl_certificate_key  /home/deploy/.login.key;
+  ssl_certificate  /home/deploy/.logon.crt;
+  ssl_certificate_key  /home/deploy/.oplerno_ssl.key;
   ssl_dhparam /home/deploy/.dh.param;
   ssl_session_cache shared:SSL:10m;
   ssl_session_timeout  5m;
